--- a/Budget/todo.txt
+++ b/Budget/todo.txt
@@ -5,3 +5,8 @@ further implementation of workbookresult
 data gathering with helper functions
 
 general refactoring
+
+dynamic form with scrolling to add additional labels and textboxes during data entry
+
+//NEED TO ADD AN OPTION TO BREAK EARLY OR MODIFY NUMBER OF BILLS
+//NEED TO BE ABLE TO DYNAMICALLY ADD COLUMNS, ENTER NEW FORMULAS WITH EASE (ML?), AND ADJUST BILL SPLITTING 
