--- a/Budget/todo.txt
+++ b/Budget/todo.txt
@@ -23,3 +23,5 @@ maybe a class for income that calls a helper function in data gathering
 add to google site more history. look into a domain. mention starcap.
 
 spanish sql
+
+icons for app and for site
